<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_DCSystemDefaultParameters" Id="{496e80cc-a8e2-48d6-803b-19682b772885}">
    <Declaration><![CDATA[TYPE ST_DCSystemDefaultParameters :
STRUCT
	aSetPointLimitsRelativeSpeed : ARRAY[1..2] OF REAL := [0,100];
	aSetPointLimitsTemperatureDifference : ARRAY[1..2] OF REAL := [3,5];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>